--- a/index.html
+++ b/index.html
@@ -161,4 +161,14 @@
 
     <section class="clb" id="tieng-anh">
         <h2>CLB Tiếng Anh</h2>
+
         <div class="images">
+            <img src="https://uploads.onecompiler.io/44b86zu9v/44b8775ev/IMG_20260121_115503.jpg" alt="Hoạt động CLB Tiếng Anh 1" />
+            <img src="https://uploads.onecompiler.io/44b86zu9v/44b8775ev/IMG_20260121_115510.jpg" alt="Hoạt động CLB Tiếng Anh 2" />
+        </div>
+        <p class="purpose">
+          Mục đích: CLB Tiếng Anh giúp các thành viên nâng cao khả năng giao tiếp, rèn luyện kỹ năng thuyết trình và tự tin sử dụng ngoại ngữ trong học tập và cuộc sống.
+        </p>
+    </section>
+</body>
+</html>
